<resources>
    <string name="app_name">OpenPager</string>
    <string name="action_rules">Regeln</string>
    <string name="action_settings">Einstellungen</string>
    <string name="action_about">Über</string>
    <string name="action_logout">Ausloggen</string>
    <string name="action_navigation">Navi</string>
    <string name="action_stopSpeak">Vorlesen anhalten</string>

    <string name="oss_licenses">Open Source Licenses</string>
    <string name="send_to">Sende zu</string>
    <string name="only_param_string" translatable="false">%1$s</string>

    <plurals name="time_helper_diff_day">
        <item quantity="one">%d Tag, </item>
        <item quantity="other">%d Tage, </item>
    </plurals>
    <plurals name="time_helper_diff_hour">
        <item quantity="one">%d Stunde, </item>
        <item quantity="other">%d Stunden, </item>
    </plurals>
    <plurals name="time_helper_diff_minute">
        <item quantity="one">%d Minute, </item>
        <item quantity="other">%d Minuten, </item>
    </plurals>
    <plurals name="time_helper_diff_second">
        <item quantity="one">%d Sekunde</item>
        <item quantity="other">%d Sekunden</item>
    </plurals>

    <!-- Operation -->
    <string name="operation_tab_info">Info</string>
    <string name="operation_tab_map">Karte</string>
    <string name="operation_tab_osm">OFM</string>
    <string name="operation_confirm">Alarm bestätigen</string>
    <string name="operation_map_activity_alert">Google Maps ist nicht installiert.</string>

    <!-- Operation rules -->
    <string name="operation_rules_name" translatable="false">%1$s (%2$s - %3$s)</string>

    <!-- Strings related to Main -->
    <string name="welcome_card_title">Willkommen beim OpenPager</string>
    <string name="welcome_card_subtitle">Der AlarmierungsApp für OpenFireSource!</string>
    <string name="welcome_card_desc">Um alamiert werden zu können, musst du deiner Zuständigen
        Person deine FCM-ID (zu finden in den Einstellungen) zukommen lassen.
        \n\nVielen Dank für die Benutzung :=)
    </string>
    <string name="welcome_card_desc_v3">Neuerungen bei Version 1.1:\n
        - OpenFireMap jetzt auswählbar\n
        - Sprachausgabe ist aktivierbar
    </string>
    <string name="welcome_card_desc_v4">Neuerungen bei Version 1.1.1:\n
        - Bugfix für ankommende Alarme
    </string>
    <string name="welcome_card_desc_v5">Neuerungen bei Version 1.1.2:\n
        - Bugfix für Abstürze bei der Sprachausgabe\n
        - Bugfix für Fehler in der Karte bei der Änderung der Ausrichtung des Bildschirmes
    </string>
    <string name="welcome_card_desc_v6">Neuerungen bei Version 1.1.3:\n
        - Bugfix
    </string>
    <string name="welcome_card_desc_v7">Neuerungen bei Version 1.1.4:\n
        - Bugfix
    </string>
    <string name="main_long_click_header">Option auswählen</string>
    <string name="main_dialog_delete">Alarm wirklich löschen?</string>

    <!-- Strings related to About -->
    <string name="aboutLibraries_description_showIcon" translatable="false">true</string>
    <string name="aboutLibraries_description_showVersion" translatable="false">true</string>
    <string name="aboutLibraries_description_text">OpenPager ist eine AlarmierungsApp für AlarmWorkflow. Viel Spaß damit :=)</string>
    <string name="title_activity_settings">Einstellungen</string>

    <!-- Strings related to Settings -->
    <string name="fcm_key_copied">FMC-ID in Zwischenablage kopiert!</string>

    <!-- Example General settings -->
    <string name="pref_header_general">Allgemeines</string>

    <string name="pref_title_activate_app">Dienst aktivieren</string>
    <string name="pref_description_activate_app">Warnung: Wenn deaktiviert werden keine Nachrichten empfangen!</string>

    <string name="pref_title_alarm_timeout">Alarm Timeout</string>
    <string-array name="pref_alarm_timeout_titles">
        <item>Nie</item>
        <item>3 Sekunden</item>
        <item>5 Sekunden</item>
        <item>10 Sekunden</item>
        <item>15 Sekunden</item>
        <item>30 Sekunden</item>
        <item>1 Minute</item>
        <item>2 Minuten</item>
        <item>5 Minuten</item>
    </string-array>
    <string-array name="pref_alarm_timeout_values" translatable="false">
        <item>0</item>
        <item>3</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>300</item>
    </string-array>

    <string name="pref_title_alarm_fontsize">Alarmnachricht Schriftgröße</string>
    <string-array name="pref_alarm_fontsize_titles" translatable="false">
        <item>12sp</item>
        <item>14sp</item>
        <item>16sp</item>
        <item>18sp</item>
        <item>20sp</item>
    </string-array>
    <string-array name="pref_alarm_fontsize_values" translatable="false">
        <item>12</item>
        <item>14</item>
        <item>16</item>
        <item>18</item>
        <item>20</item>
    </string-array>

    <string name="pref_title_alarm_maps">Alarmkarten (Phone)</string>
    <string-array name="pref_alarm_maps_titles">
        <item>Google Maps &amp; OpenFireMap</item>
        <item>Nur GoogleMaps</item>
        <item>Nur OpenFireMap</item>
    </string-array>
    <string-array name="pref_alarm_maps_values" translatable="false">
        <item>both</item>
        <item>gmap</item>
        <item>ofm</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Daten &amp; Sync</string>

    <string name="pref_title_encryption">Verschlüsselung</string>
    <string name="pref_desc_encryption">Aktiviert die Verschlüsselung der Nachrichten</string>
    <string name="pref_title_password">Passwort</string>
    <string name="pref_desc_password">Passwort für die Verschlüsselung</string>
    <string name="pref_title_fcm">FCM-ID</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Benachrichtigungen</string>
    <string name="pref_title_playsound">Sound abspielen</string>
    <string name="pref_desc_paysound">Sound abspielen wenn eine Nachricht eingeht</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_ringtone">Ton auswählen</string>
    <string name="pref_title_vibrate">Vibrationsmuster</string>
    <string name="pref_desc_vibrate">Vibrationsalarm wenn eine Nachricht eingeht</string>
    <string-array name="pref_notification_vibrate_titles">
        <item>Aus</item>
        <item>Kurz</item>
        <item>Mittel</item>
        <item>Lang</item>
    </string-array>
    <string-array name="pref_notification_vibrate_values" translatable="false">
        <item>0</item>
        <item>500</item>
        <item>1000</item>
        <item>2000</item>
    </string-array>

    <string name="pref_title_led_flash">LED blinken</string>
    <string name="pref_desc_led_flash">LED blinken wenn eine Nachricht eingeht</string>

    <string name="pref_title_notification_volume">Lautstärke bei eingehenden Alarms</string>
    <string-array name="pref_notification_volume_titles">
        <item>25&#65130;</item>
        <item>50&#65130;</item>
        <item>75&#65130;</item>
        <item>100&#65130;</item>
        <item>Telefon</item>
    </string-array>
    <string-array name="pref_notification_volume_values" translatable="false">
        <item>25</item>
        <item>50</item>
        <item>75</item>
        <item>100</item>
        <item>0</item>
    </string-array>

    <!-- Regeln -->
    <string name="title_rule_list">Regeln</string>
    <string name="title_rule_detail">Regeln Detail</string>
    <string name="rule_diag_new_title">Regel erstellen</string>
    <string name="rule_diag_new_desc">Name für die neue Regel eingeben</string>
    <string name="rule_delete_title">Regel löschen</string>
    <string name="rule_delete_desc">Möchtest du die Regel wirklich löschen?</string>

    <string name="settings_filter">Filtereinstellungen</string>
    <string name="pref_title_name">Name</string>
    <string name="pref_desc_name">Name der Regeln</string>
    <string name="pref_title_activate">Benachrichtigungen aktivieren</string>
    <string name="pref_desc_activate">Wenn deaktiviert werden Nachrichten empfangen, aber nicht aktiv Benachrichtigt (nur eine Notification).</string>
    <string name="pref_title_starttime">Startzeit</string>
    <string name="pref_title_stoptime">Stopzeit</string>
    <string name="pref_title_searchText">Inhalt</string>
    <string name="pref_desc_searchText">Inhalt welcher Vorhanden sein muss, um die Regel auszuführen.</string>
    <string name="pref_title_delete">Regel löschen</string>
    <string name="pref_desc_delete">Die Regel wird unwiederruflich gelöscht.</string>
    <string name="pref_title_notification">Benachrichtigungen</string>
    <string name="pref_desc_notification">Benachrichtigungen für diese Regel festlegen.</string>
    <string name="pref_title_ownNotification">Eigene Benachrichtigungen?</string>
    <string name="pref_desc_ownNotification">Sollen eigene Benachrichtigungen für diese Regel aktiviert werden?</string>
    <string name="pref_title_priority">Priorität</string>
    <string name="pref_desc_priority">Welche Priorität hat die Regel?</string>
    <string name="pref_title_speak">Alarmnachricht vorlesen</string>
    <string name="pref_desc_speak">Liest die Alarmnachricht vor, nachdem diese bestätigt wurde.</string>
    <string name="pref_fcm_alert_title">Push-Key erneut registrieren?</string>
    <string name="pref_fcm_alert_message">Der Push-Key wird erneut beim Server registriert.</string>

    <!-- General -->
    <string name="cancel">Abbrechen</string>
    <string name="create">Erstellen</string>
    <string name="delete">Löschen</string>
    <string name="operation_base">Einsatzort</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_operation">Alarmnachricht</string>

    <!-- Permission -->
    <string name="permission_rationale_title">Berechtigungen</string>
    <string name="permission_rationale_message">Folgende Berechtigungen sind für den vollen Funktionsumfang von OpenPager notwendig.</string>
    <string name="permission_denied_title">Berechtigungen</string>
    <string name="permission_denied_message">Ohne diese Berechtigungen wird OpenPager nicht oder nur eingeschränkt arbeiten..</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_logout">Sign out</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Passwort</string>
    <string name="action_sign_in">Anmelden</string>
    <string name="error_invalid_email">E-Mail ist nicht korrekt</string>
    <string name="error_invalid_password">Das Passwort ist zu kurz</string>
    <string name="error_incorrect_password">Das Passwort ist nicht korrekt</string>
    <string name="error_field_required">Dieses Feld ist ein Pflichtfeld</string>
    <string name="error_invalid_credentials">E-Mail oder Passwort falsch</string>
    <string name="error_invalid_logout">Logout nicht möglich (keine Internetverbindung)</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_register">Registrieren</string>
    <string name="login_forgot_password">Passwort vergessen</string>
    <string name="title_activity_about">About us</string>
</resources>
