<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:key="notifications_play_sound"
        android:summary="@string/pref_desc_paysound"
        android:title="@string/pref_title_playsound" />

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:dependency="notifications_play_sound"
        android:key="notifications_new_message_ringtone"
        android:ringtoneType="notification"
        android:title="@string/pref_title_ringtone" />

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_notification_volume_titles"
        android:entryValues="@array/pref_notification_volume_values"
        android:key="notifications_new_message_volume"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:dependency="notifications_play_sound"
        android:title="@string/pref_title_notification_volume" />


    <ListPreference
        android:defaultValue="200"
        android:entries="@array/pref_notification_vibrate_titles"
        android:entryValues="@array/pref_notification_vibrate_values"
        android:key="notifications_new_message_vibrate"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:summary="@string/pref_desc_vibrate"
        android:title="@string/pref_title_vibrate"/>

    <!--
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="notifications_new_message_led"
        android:title="@string/pref_title_led_flash"
        android:summary="@string/pref_desc_led_flash" />
    -->
</PreferenceScreen>
