<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:mContext="de.openfiresource.openpager.ui.operation.OperationActivity">
    <item
        android:id="@+id/action_navigation"
        android:icon="@drawable/ic_local_taxi_white_24dp"
        android:orderInCategory="0"
        android:title="@string/action_navigation"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_stopSpeak"
        android:icon="@drawable/ic_baseline_volume_mute_24px"
        android:orderInCategory="1"
        android:title="@string/action_stopSpeak"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/delete"
        app:showAsAction="never" />
</menu>
